# STM32-Image-Streamer

./: LICENSE  README.md
ArrayMaker/: ArrayMaker.c  CMakeLists.txt
Client/Inc/: Logic.h
Client/Src/: Logic.c
RGBConventor888To565/: CMakeLists.txt  RGBConventor888To565.c
Server/: CMakeLists.txt
Server/Inc/: General.h  Logic.h
Server/Src/: General.cpp  Logic.cpp
